[gd_scene load_steps=5 format=3 uid="uid://optt72fc6d1s"]

[ext_resource type="Script" uid="uid://ddg3tqvn4r2o1" path="res://CoffeeCreationScreen/CoffeeCreationScripts/extras_selection.gd" id="1_deu8v"]
[ext_resource type="Texture2D" uid="uid://bymxt0dacspup" path="res://CoffeeCreationScreen/CoffeeCreationScreenAssets/BackArrowTemp.png" id="1_h7hre"]
[ext_resource type="Texture2D" uid="uid://cl163073nb40y" path="res://CoffeeCreationScreen/CoffeeCreationScreenAssets/ForwardArrowTemp.png" id="2_deu8v"]
[ext_resource type="Texture2D" uid="uid://ck2wkw400ojql" path="res://CoffeeCreationScreen/CoffeeCreationScreenAssets/PourArrowTemp.png" id="3_oqq70"]

[node name="ExtrasSelection" type="Node2D"]
script = ExtResource("1_deu8v")

[node name="ExtrasBack" type="TextureButton" parent="."]
offset_left = 59.0
offset_top = 31.0
offset_right = 176.0
offset_bottom = 113.0
texture_normal = ExtResource("1_h7hre")

[node name="ExtrasForward" type="TextureButton" parent="."]
offset_left = 368.0
offset_top = 33.0
offset_right = 485.0
offset_bottom = 115.0
texture_normal = ExtResource("2_deu8v")

[node name="ExtrasPour" type="TextureButton" parent="."]
offset_left = 228.0
offset_top = 138.0
offset_right = 310.0
offset_bottom = 255.0
texture_normal = ExtResource("3_oqq70")

[node name="ExtrasLabel" type="Label" parent="."]
offset_left = 240.0
offset_top = 58.0
offset_right = 318.0
offset_bottom = 99.0
text = "Spice"

[connection signal="pressed" from="ExtrasBack" to="." method="_on_extras_back_pressed"]
[connection signal="pressed" from="ExtrasForward" to="." method="_on_extras_forward_pressed"]
[connection signal="pressed" from="ExtrasPour" to="." method="_on_extras_pour_pressed"]
